rob2_ws/log/build_2025-12-09_11-15-20/py_pubsub/stderr.log
  File "/home/emsi/rob2_ws/install/py_pubsub/lib/python3.10/site-packages/py_pubsub/publisher_member_function.py", line 8
    super().__init__('minimal_publisher'):
                                         ^
SyntaxError: invalid syntax

